[gd_scene load_steps=12 format=3 uid="uid://bum6d826ok2iw"]

[ext_resource type="Script" uid="uid://dx0n8xyho8lij" path="res://scenes/characters/cop/cop.gd" id="1_4orur"]
[ext_resource type="Texture2D" uid="uid://dybux5kj2ld88" path="res://assets/imgs/cop.png" id="1_v26da"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4orur"]
atlas = ExtResource("1_v26da")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_26t63"]
atlas = ExtResource("1_v26da")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_m21hl"]
atlas = ExtResource("1_v26da")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l80v6"]
atlas = ExtResource("1_v26da")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahq25"]
atlas = ExtResource("1_v26da")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_cyufj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4orur")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_26t63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m21hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l80v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahq25")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v26da"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_4orur"]
radius = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_26t63"]
radius = 78.0064

[node name="Cop" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_4orur")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -15)
sprite_frames = SubResource("SpriteFrames_cyufj")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -7)
shape = SubResource("CircleShape2D_v26da")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_4orur")

[node name="FindCollectorArea" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="FindCollectorArea"]
position = Vector2(0, -14)
shape = SubResource("CircleShape2D_26t63")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_entered" from="FindCollectorArea" to="." method="_on_find_collector_area_body_entered"]
[connection signal="body_exited" from="FindCollectorArea" to="." method="_on_find_collector_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
